                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-07-2005 added: Support for brackets [] in <visible> conditionals.
 - 12-07-2005 fixed: Lockup on start with shares such as cdda: (without the //).
 - 12-07-2005 fixed: Crash in numeric dialog with XPR fonts.
 - 11-07-2005 fixed: dvdplayer timing
 - 11-07-2005 fixed: Labels with $ in them were displayed erratically.
 - 11-07-2005 changed: Simpler auto-switch thumb/list for My Pictures.
 - 11-07-2005 added: audio volume can now be changed in the dvdplayer
 - 11-07-2005 fixed: Parent dir was unpredictable on smb shares with a username but no password specified.
 - 11-07-2005 fixed: .nfo lookup info wasn't added to the video database.
 - 11-07-2005 changed: Cleanup of some of the dialog code.
 - 11-07-2005 changed: guilib/stdafx.h -> guilib/include.h in guilib to reduce clashes when VS can't decide which one is which.
 - 11-07-2005 changed: New numeric input dialog - handles time, date, numbers, ips, and numeric passwords.
 - 11-07-2005 fixed: ftp client, only bmp picture view works [the rest will follow] [GeminiServer]
 - 11-07-2005 fixed: ftp client: mplayer dllsend socket Winsock error in debug mode! [GeminiServer]
 - 10-07-2005 fixed: More than one item could become highlighted in Music Playlist window when skipping songs
 - 10-07-2005 fixed: Embedded album thumbs was broken again.
 - 09-07-2005 added: customized keymap for the Media Center Extender Remote (incl schematics)
 - 09-07-2005 changed: the search button in Music Luibrary is more intuitive now
 - 09-07-2005 fixed: Crash on up folder from root of library view.
 - 09-07-2005 fixed: Milkdrop - audio conversion fixed and cache size for preset loading increased.